# faceod

./: README.md  api_input.dart  pubspec.yaml
.devcontainer/: Dockerfile  FindJpegPkg.cmake  FindLibUSB.cmake  devcontainer.json
android/: .gitignore  build.gradle  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/faceod/: MainActivity.kt  UvcCamera.kt
android/app/src/main/java/com/example/faceod/uvc/: UvcCameraConfig.java
android/app/src/main/java/com/example/faceod/uvc/presets/: uvc.java
android/app/src/main/java/org/faceod/platform/: AppApi.g.kt
android/app/src/main/jni/: CMakeLists.txt  libuvc.i
android/app/src/main/jni/src/libuvc/include/libuvc/: libuvc.h  libuvc_internal.h
android/app/src/main/kotlin/com/example/faceod/: MainActivity.kt
integration_test/: simple_test.dart
lib/: api.dart  camera.dart  channel.dart  main.dart
lib/src/: api.g.dart  uvc_camera_controller.dart
lib/src/rust/: frb_generated.dart
rust/: Cargo.toml
rust/crates/uvc/: Cargo.toml
rust/crates/uvc-sys/: Cargo.toml  build.rs  wrapper.h
rust/crates/uvc-sys/src/: lib.rs
rust/src/api/: mod.rs  uvc.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_faceod.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_faceod.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
